<resources>
    <string name="app_name">MovieScope</string>
    <string name="login_text_button">Login</string>
    <string name="register_text_button">Register</string>>
    <string name="movie_search">Movie Search</string>
    <string name="enter_search">Enter a movie</string>
    <string name="movieList_text">Movie List</string>
    <string name="favorites">Favorites</string>
    <string name="setting">Settings</string>
    <string name="name_hint">Enter Your Username</string>
    <string name="pass_hint">Enter Your Password</string>
    <string name="forget">Forgot Your Password</string>
    <string name="password_text_hint">Enter Password</string>
    <string name="email_text_hint">Enter E-mail</string>
    <string name="username_text_hint">Enter Username</string>
    <string name="re_password_text_hint"> Confirm Enter Password</string>
    <string name="movieDetailsText">Movie Details</string>
    <string name="welcome">Welcome</string>
    <string name="e_mail">Enter Your E-mail Address</string>
    <string name="reset_button">Reset Password</string>
    <string name="home">Home</string>
    <string name="fav">Favorites</string>
    <string name="title">Title : </string>
    <string name="actor">Actor : </string>
    <string name="writer">Writer : </string>
    <string name="director">Director : </string>
    <string name="year">Year : </string>
    <string name="imd">IMD : </string>
    <string name="spiderman">Spider-Man</string>
    <string name="the_rings">The Lord of the rings</string>
    <string name="email_valid">Enter valid email address</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="confirm_password">Enter Confirm Password </string>
    <string name="register_faild">Registration failed. Please check your network connection.</string>
    <string name="password_match">Passwords do not match</string>
    <string name="login_faild">Login failed. Please check your email and password</string>
    <string name="reset_email">Password reset email has been sent</string>
    <string name="reset_email_error">Password reset email could not be sent</string>
    <string name="plase_email">Please enter an email address</string>
    <string name="register">Register</string>
    <string name="pass_lenght">Your password must be at least 6 characters long</string>
</resources>